--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,26 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".TermActivity"
+            android:label="Term Detail"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.wgu.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".CourseListActivity"
+            android:label="Course List"
+            android:parentActivityName=".TermActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.wgu.TermActivity" />
         </activity>
 
         <provider
@@ -26,14 +43,10 @@
             android:authorities="com.example.wgu.termprovider"
             android:exported="false" />
 
-        <activity
-            android:name=".TermActivity"
-            android:label="TermActivity"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.wgu.MainActivity" />
-        </activity>
+        <provider
+            android:name=".CourseProvider"
+            android:authorities="com.example.wgu.courseprovider"
+            android:exported="false" />
     </application>
 
 </manifest>
