--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
         <activity
@@ -16,10 +16,10 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".TermActivity"
             android:label="Term Detail"
@@ -28,7 +28,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.wgu.MainActivity" />
         </activity>
-
         <activity
             android:name=".CourseListActivity"
             android:label="Course List"
@@ -37,16 +36,24 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.wgu.TermActivity" />
         </activity>
+        <activity
+            android:name=".CourseActivity"
+            android:label="Course Detail"
+            android:parentActivityName=".CourseListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.wgu.CourseListActivity" />
+        </activity>
 
         <provider
             android:name=".TermProvider"
             android:authorities="com.example.wgu.termprovider"
             android:exported="false" />
-
         <provider
             android:name=".CourseProvider"
             android:authorities="com.example.wgu.courseprovider"
             android:exported="false" />
+
     </application>
 
 </manifest>
