--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name=".AssessmentProvider"
             android:authorities="com.example.wgu.assessmentprovider"
             android:exported="false" />
+        <provider
+            android:name=".MentorProvider"
+            android:authorities="com.example.wgu.mentorprovider"
+            android:exported="false" />
 
     </application>
 
