Added the Main view. Added missing cursor adapters, content views. Standardized file names. Standardized text size. Changed buttons to links.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         tools:ignore="AllowBackup">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="Welcome!"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,12 +21,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TermActivity"
-            android:label="Term Detail"
+            android:name=".TermListActivity"
+            android:label="Term List"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.wgu.MainActivity" />
+        </activity>
+        <activity
+            android:name=".TermActivity"
+            android:label="Term Detail"
+            android:parentActivityName=".TermListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.wgu.TermListActivity" />
         </activity>
         <activity
             android:name=".CourseListActivity"
