--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:theme="@style/TealCyan"
+        android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
         <activity
             android:name=".MainActivity"
@@ -23,8 +23,7 @@
         <activity
             android:name=".TermListActivity"
             android:label="Term List"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/TealCyan">
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.wgu.MainActivity" />
